RESOLVED FIXED67286
css2.1/t090204-display-change-01-b-ao.html fails after r94084
https://bugs.webkit.org/show_bug.cgi?id=67286
Summary css2.1/t090204-display-change-01-b-ao.html fails after r94084
Balazs Kelemen
Reported 2011-08-31 05:56:26 PDT
--- /ramdisk/qt-linux-release/build/layout-test-results/css2.1/t090204-display-change-01-b-ao-expected.txt +++ /ramdisk/qt-linux-release/build/layout-test-results/css2.1/t090204-display-change-01-b-ao-actual.txt @@ -1,14 +1,14 @@ layer at (0,0) size 800x600 RenderView at (0,0) size 800x600 -layer at (0,0) size 800x96 - RenderBlock {HTML} at (0,0) size 800x96 - RenderBody {BODY} at (8,16) size 784x72 +layer at (0,0) size 800x113 + RenderBlock {HTML} at (0,0) size 800x113 + RenderBody {BODY} at (8,16) size 784x89 RenderBlock {P} at (0,0) size 784x22 RenderText {#text} at (0,0) size 285x22 text run at (0,0) width 285: "There should be no red below, only green." RenderBlock (floating) {DIV} at (0,38) size 784x17 [color=#008000] [bgcolor=#FF0000] RenderText {#text} at (0,0) size 16x17 text run at (0,0) width 16: "X" - RenderBlock {DIV} at (0,38) size 16x34 [color=#008000] [bgcolor=#FF0000] + RenderBlock {DIV} at (0,38) size 16x51 [color=#008000] [bgcolor=#FF0000] RenderText {#text} at (0,17) size 16x17 text run at (0,17) width 16: "X"
Attachments
Patch (2.14 KB, patch)
2011-09-07 11:43 PDT, Dave Hyatt
mitz: review+
Balazs Kelemen
Comment 1 2011-08-31 06:38:38 PDT
Ryosuke Niwa
Comment 3 2011-09-07 10:24:04 PDT
*** Bug 23272 has been marked as a duplicate of this bug. ***
Dave Hyatt
Comment 4 2011-09-07 11:43:21 PDT
Dave Hyatt
Comment 5 2011-09-07 11:47:09 PDT
Fixed in r94693.
Ryosuke Niwa
Comment 7 2011-09-07 11:58:23 PDT
(In reply to comment #6) > http://build.webkit.org/TestFailures/#/SnowLeopard Intel Release (Tests) > > Seems to think it's still failng on mac: > http://build.webkit.org/old-results/SnowLeopard%20Intel%20Release%20(Tests)/r94084%20(32683)/css2.1/t090204-display-change-01-b-ao-pretty-diff.html This one is just landed so I don't think bots have ran the tests yet.
Note You need to log in before you can comment on or make changes to this bug.