https://bugs.webkit.org/show_bug.cgi?id=67286

REGRESSION: css2.1/t090204-display-change-01-b-ao.html fails after r94084.

Make sure that the trailing floats line box explicitly sets the line top with leading and line bottom with
leading to just be the block height.

Reviewed by Dan Bernstein.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::linkToEndLineIfNeeded):



Canonical link: https://commits.webkit.org/83589@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94693 268f45cc-cd09-0410-ab3c-d52691b4dbfc